--- a/css/html.css
+++ b/css/html.css
@@ -72,17 +72,11 @@ a:hover {
 
 
 ol {  
-  margin: 10px 30px;
-  padding: 0 30px;
+    margin: 10px 30px;
+    padding: 0 30px 0 5px;
+    list-style: 1;
+	
 
-  font-size: 1.4em;
-  color: #532406;
-  background-color: #FFF;
-}
-
-ol span {
-  font-size: 0.7em;
-  color: #6D6864;
 }
 
 ul {
@@ -93,8 +87,7 @@ ul {
 
 ul li {
   padding-left: 25px;
-  background: url(../img/bg/bullet.gif) no-repeat;
-  background-position: 0 3px;
+
 }
 
 acronym {
