add new page called group, modified header for all pages

--- a/css/layout.css
+++ b/css/layout.css
@@ -133,6 +133,10 @@ ul.five li a {
   width: 20%;
 }
 
+ul.six li a {
+  width: 16%;
+}
+
 /**************************************************************
    #page: Holds the main page content.
  **************************************************************/
